<resources>
    <string name="app_name">Not Lonesome George</string>

    <!-- content descriptions for main activity bottom buttons -->
    <string name="tortoiseBTN">Achievements Navigation</string>
    <string name="hatBTN">Skills Navigation</string>
    <string name="cameraBTN">Camera Navigation</string>
    <string name="hamburgerBTN">Settings Navigation</string>

    <!-- main activity top wealth levels -->
    <!-- strings -->
    <string name="level_display">LEVEL XX</string>
    <string name="wealth_dandelion_num">MONEYXXX</string>
    <string name="wealth_tortoise_num">FRIENDXXX</string>
    <!-- content description -->
    <string name="progress_bar">Progress Bar</string>
    <string name="wealth_dandelion_img">Dandelion IMG</string>
    <string name="wealth_tortoise_img">Tortoise IMG</string>

    <!-- main activity george -->
    <string name="george_view">LONESOME GEORGE</string>

    <!-- achievements activity -->
    <string name="ach_display">Achievements</string>
    <string name="friend_tortoise_img">Tortoise IMG</string>
    <string name="friend_tortoise_name">Friend Name XXX</string>
    <string name="friend_description_BTN">Detail</string>

    <!-- description activity -->
    <string name="description_display">Description</string>
    <string name="friend_name">Name:</string>
    <string name="friend_description">Skills:</string>

    <!-- skills activity -->
    <string name="skills_display">Skills</string>
    <string name="george_clicked">george_clicked</string>

    <!-- camera activity -->
    <string name="cam_display">Camera</string>

    <!-- login/register activity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>

</resources>