<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olive_super_light_yellow"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/tortoiseBTN"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/olive_light_brown"
                android:contentDescription="@string/tortoiseBTN"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tortoise" />

            <ImageButton
                android:id="@+id/hatBTN"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/olive_light_yellow"
                android:contentDescription="@string/hatBTN"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/hat" />

            <ImageButton
                android:id="@+id/cameraBTN"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/olive_light_brown"
                android:contentDescription="@string/cameraBTN"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/camera" />

            <ImageButton
                android:id="@+id/hamburgerBTN"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/olive_light_yellow"
                android:contentDescription="@string/hamburgerBTN"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/hamburger" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wealth_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/olive_super_light_green"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/level_display"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/level_display"
                    android:textAlignment="center"
                    android:textColor="@color/olive_dark_green"
                    android:textSize="15sp" />

                <ProgressBar
                    android:id="@+id/exp_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="3"
                    android:contentDescription="@string/progress_bar"
                    android:progress="30"
                    android:progressBackgroundTint="@color/olive_orange"
                    android:progressTint="@color/olive_dark_green"
                    android:scaleY="3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/wealth_dandelion_img"
                    android:layout_width="10dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/wealth_dandelion_img"
                    app:srcCompat="@drawable/dandelion" />

                <TextView
                    android:id="@+id/wealth_dandelion_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/wealth_dandelion_num"
                    android:textColor="@color/olive_dark_green"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/wealth_tortoise_img"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/wealth_tortoise_img"
                    app:srcCompat="@drawable/tortoise" />

                <TextView
                    android:id="@+id/wealth_tortoise_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/wealth_tortoise_num"
                    android:textColor="@color/olive_dark_green"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wealth_box">

            <ImageView
                android:id="@+id/george_view"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/george_view"
                app:srcCompat="@drawable/tortoise" />

            <TextView
                android:id="@+id/george_name_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/george_view"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>