<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display_description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/olive_dark_green"
            android:gravity="center"
            android:text="@string/description_display"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/skills_tortoise_img"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:srcCompat="@drawable/tortoise" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skills_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/friend_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/skills_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="10"
                android:text="Name here..."
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/skills_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/friend_description"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/skills_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Description here..."
            android:textSize="18sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>